--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,7 @@ $mainColor: #000; // Цвет шрифта по умолчанию
 $colorBlue: #1A2578;
 $colorGray: #484C63;
 $colorRed: #BF0830;
+$colorDark: #3a3a3c;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 // Минимальная ширина страницы
@@ -136,4 +137,5 @@ body {
 
 // Подключение стилей отдельных страниц
 @import "main-page";
+@import "products";
 @import "slick";
