--- a/src/scss/main-page.scss
+++ b/src/scss/main-page.scss
@@ -5,6 +5,9 @@
         padding-top: rem(101);
         padding-bottom: rem(200);
         border-bottom: 1px solid rgba(197, 203, 226, 0.5);
+        @media (max-width:$tablet){
+             padding-bottom: rem(80); 
+        }
     }
 }
 .brands {
@@ -22,8 +25,8 @@
             color: $colorRed;
         }
         @media (max-width: $mobileSmall) {
-            font-size: rem(30);
-            line-height: math.div(35, 30);
+            font-size: rem(27);
+            // line-height: math.div(35, 30);
         }
     }
     // .brands__list
@@ -82,6 +85,9 @@
         font-weight: bold;
         @media (max-width: $mobile) {
             font-size: rem(35);
+        }
+        @media (max-width: $mobileSmall) {
+            font-size: rem(27);
         }
     }
     // .lines__subtitle
@@ -155,7 +161,7 @@
         margin-left: rem(62);
         font-size: rem(24);
         line-height: math.div(31, 24);
-        color: #3a3a3c;
+        color: $colorDark;
         @media (max-width: $tablet) {
             margin-left: rem(30);
             margin-top: rem(30);
@@ -163,28 +169,32 @@
     }
     // .lines__item-link
     &__item-link {
-        display: inline-block;
-        text-align: center;
-        padding-left: rem(10);
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
         width: rem(139);
         height: rem(45);
-        padding: rem(12) rem(24);
-        padding-left: rem(22);
         margin-left: rem(73);
         margin-top: rem(33);
         font-size: rem(14);
-        line-height: math.div(21, 14);
+        padding: 0;
+        &:hover {
+            color: #fff;
+            transition: all 0.3s ease;
+
+            path {
+                stroke: #fff;
+                transition: all 0.3s ease;
+            }
+        }
+        // line-height: math.div(21, 14);
         @media (max-width: $tablet) {
             margin-left: rem(30);
             padding: rem(12) rem(22);
-            padding-left: rem(22);
         }
-        &::before {
-            content: "";
-            background: url(../img/arrow-right.svg) no-repeat;
-            width: rem(14);
-            height: rem(14);
-            padding-right: rem(22);
+        span {
+            margin-top: rem(3);
         }
     }
 }
@@ -194,6 +204,22 @@
     &__awards {
         padding-top: rem(20);
         background: linear-gradient(268.52deg, #e3e7f6 -52.27%, rgba(227, 231, 246, 0) 138.23%);
+    }
+    &__awards-join{
+        padding-top: rem(110);
+        background: linear-gradient(335.73deg, #E3E7F6 12.46%, rgba(227, 231, 246, 0) 84.19%);
+        @media (max-width:$tablet){
+            padding: rem(30);
+        }
+        .awards__text{
+            max-width: rem(340);
+            // flex: 0 1 50%;
+        }
+        .awards__img{
+            @media (max-width:$mobile){
+                 max-width: rem(200); 
+            }
+        }
     }
 }
 .awards {
@@ -242,11 +268,23 @@
             max-width: rem(700);
         }
     }
+    &__button{
+        margin-top: rem(20);
+        @media (max-width:$mobile){
+            display: flex;
+             justify-content: center; 
+             margin-bottom: rem(20);
+        }
+        &:hover{
+            color: #fff;
+        }
+    }
     // .awards__img
     &__img {
         max-width: rem(559);
         @media (max-width: $tablet) {
             max-width: rem(400);
+            
         }
     }
 }
@@ -254,55 +292,77 @@
 .section {
     // .section__slider-waves
     &__slider-waves {
+        padding-top: rem(120);
+        padding-bottom: rem(100);
+        @media (max-width:$tablet){
+            padding-top: rem(40);
+            padding-bottom: rem(40);
+        }
     }
 }
 .slider-waves {
+    position: relative;
     // .slider-waves__container
     &__container {
     }
     // .slider-waves__title
     &__title {
+        text-align: center;
+        margin-bottom: rem(16);
+        color: $colorBlue;
+        font-weight: bold;
+        font-size: rem(44);
+        line-height: math.div(57, 44);
+        @media (max-width: $mobileSmall) {
+            font-size: rem(27);
+        }
     }
+
     // .slider-waves__subtitle
     &__subtitle {
+        text-align: center;
+        color: $colorGray;
+        font-size: rem(16);
+        line-height: math.div(27, 16);
+        margin-bottom: rem(113);
+        @media (max-width:$tablet){
+            margin-bottom: rem(40);
+        }
     }
-    // .slider-waves__list
-    &__list {
-        position: relative;
-        display: flex;
+    // .slider-waves__slider
+    &__slider {
     }
-    // .slider-waves__item
-    &__item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: rem(256);
-        height: rem(119);
+    // .slider-waves__wrapper
+    &__wrapper {
+        padding: rem(45) 0;
+    }
+    // .slider-waves__slide
+    &__slide {
         box-shadow: 0px 0px 8px rgba(22, 23, 72, 0.07), 0px 25px 35px rgba(22, 23, 72, 0.05);
         border-radius: 8px;
-        background-color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     // .slider-waves__thumb
     &__thumb {
     }
-    // .slider-waves__arrows
-    &__arrows {
-        position: absolute;
-        left: 0;
-        display: flex;
-        // justify-content:space-between;
+}
+.swiper-button-prev,
+.swiper-button-next {
+    @media (max-width: $tablet) {
+        display: none;
     }
-    // .slider-waves__arrow-left
-    &__arrow-left {
-        background-image: url(../img/slider-waves/arrow-left.svg);
-        width: 24px;
-        height: 24px;
-    }
-    // .slider-waves__arrow-right
-    &__arrow-right {
-        background-image: url(../img/slider-waves/arrow-left.svg);
+}
+.swiper-button-prev {
+    svg {
         transform: rotate(180deg);
-        width: 24px;
-        height: 24px;
+    }
+}
+.swiper-button-next {
+}
+.swiper-button-disabled {
+    svg {
+        opacity: 0.5;
     }
 }
